сделан футер, подготовлено меню

--- a/index.html
+++ b/index.html
@@ -10,32 +10,36 @@
 </head>
 
 <body>
-	<header class="header">
-		<div class="header__content _container">
-			<div class="header__menu menu">
-				<div class="menu__icon icon-menu">
-					<span></span>
-					<span></span>
-					<span></span>
+	<div class="wrapper">
+		<header class="header">
+			<div class="header__content _container">
+				<div class="header__menu menu">
+					<div class="menu__icon icon-menu">
+						<span></span>
+						<span></span>
+						<span></span>
+					</div>
+					<nav class="menu__body">
+						<ul class="menu__list">
+							<li><a href="#" class="menu__link">Табы</a></li>
+							<li><a href="#" class="menu__link">Форма</a></li>
+							<li><a href="#" class="menu__link">Галерея</a></li>
+						</ul>
+					</nav>
 				</div>
-				<nav class="menu__body">
-					<ul class="menu__list">
-						<li><a href="#tabs-block" class="menu__link _goto-block">Табы</a></li>
-						<li><a href="#form" class="menu__link _goto-block">Форма</a></li>
-						<li><a href="#gallery-block" class="menu__link _goto-block">Галерея</a></li>
-					</ul>
-				</nav>
 			</div>
-		</div>
-	</header>
-	<main>
+		</header>
+		<main>
 
-	</main>
-	<footer class="footer">
-		<div class="footer__content _container">
-
-		</div>
-	</footer>
+		</main>
+		<footer class="footer">
+			<div class="footer__content _container">
+				<div class="footer__button">
+					<a href="https://vk.com/radiodetroit" class="btn" target="_blank">Мы ВКонтакте</a>
+				</div>
+			</div>
+		</footer>
+	</div>
 
 </body>
 
