Перенес в style.css стили картинки трека

--- a/index.html
+++ b/index.html
@@ -46,8 +46,10 @@
 				<div class="info">
 					<!--INFOS - Информация о радио -->
 					<!-- <div data-myinfo="logo" style="width:300px; height:80px; background-size:cover;"></div> -->
-					<div data-myinfo="img" style="width:400px; height:400px; background-size:cover; border-radius: 50%">
-					</div>
+					<!-- <div data-myinfo="img"
+						style="width:400px; height:400px; background-size:cover; border-radius: 50%; margin: 0 auto;">
+					</div> -->
+					<div data-myinfo="img" class="info__img"></div>
 					<br>
 					<b data-myinfo="song"></b><br>
 					Следует: <span data-myinfo="nextsong"></span><br>
@@ -55,11 +57,11 @@
 					<b>&#127911;</b> <b data-myinfo="listeners"></b> <span data-myinfo="isonline"></span> - <span
 						data-myinfo="kbps"></span> kbps
 					<a href="https://myradio24.org/3311.m3u" target="_blank">
-						<img src="https://myradio24.com/img/wmp.gif" class="info__img" title="Слушать радио в плеере" />
+						<img src="https://myradio24.com/img/wmp.gif" class="info__icon" title="Слушать радио в плеере" />
 					</a>
 					<a href="https://myradio24.com/ru/player/3311"
 						onclick="window.open(this.href,'player','width=300,height=30'); return false;">
-						<img src="https://myradio24.com/img/open.gif" class="info__img" title="Слушать радио в новом окне" />
+						<img src="https://myradio24.com/img/open.gif" class="info__icon" title="Слушать радио в новом окне" />
 					</a>
 					<br>
 					Вещает: <b data-myinfo="djname"></b><br>
