Сделан адаптив основной верстки без меню

--- a/index.html
+++ b/index.html
@@ -73,8 +73,11 @@
 				<div class="player">
 					<h1 class="player__title"><span class="player__radio">Radio</span><br><span>Detroit</span></h1>
 					<!--PLAYER - Блок расположения плеера. Плееры: default, lite, energy или custom (свой плеер) (можно несколько) -->
-					<div id="my_player" class="my_player" data-player="default" data-skin="" data-width=200 data-autoplay=0
-						data-volume=70 data-streamurl="https://myradio24.org/3311"></div>
+					<div class="wrap-player">
+						<div id="my_player" class="my_player" data-player="default" data-skin="" data-width=200
+							data-autoplay=0 data-volume=70 data-streamurl="https://myradio24.org/3311">
+						</div>
+					</div>
 					<!--END PLAYER-->
 				</div>
 			</div>
