Изменено название ссылки на GTA Сайт проекта

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 							<li><a href="https://vk.com/gta_detroit" class="header__link" target="_blank">GTA Detroit
 									ВКонтакте</a>
 							</li>
-							<li><a href=" http://gtadetroit.ru/" class="header__link" target="_blank">Сайт проекта</a></li>
+							<li><a href=" http://gtadetroit.ru/" class="header__link" target="_blank">GTA Сайт проекта</a></li>
 						</ul>
 					</nav>
 				</div>
