--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<div class="header__content container">
 				<div class="header__body">
 					<a href="/" class="header__logo">
-						<img src="img/logo.png" alt="LOGO">
+						<img src="img/logo.svg" alt="LOGO">
 					</a>
 					<div class="header__burger">
 						<span></span>
