Создана новая ветка для радио 101

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 					<!--END INFOS-->
 				</div>
 				<div class="player">
-					<h1 class="player__title"><span class="player__radio">Radio</span><br><span>Detroit</span></h1>
+					<h1 class="player__title"><span class="player__radio">Radio!</span><br><span>Detroit</span></h1>
 					<!--PLAYER - Блок расположения плеера. Плееры: default, lite, energy или custom (свой плеер) (можно несколько) -->
 					<div class="wrap-player">
 						<div id="my_player" class="my_player" data-player="default" data-skin="" data-width=200
