Подобран фон, сверстан топ инфо блок

--- a/index.html
+++ b/index.html
@@ -45,10 +45,17 @@
 
 		<main>
 			<div class="wrap-radio container">
-				<div class="info">
+				<div class="channel-info__top">
+					<div data-myinfo="img" class="channel-info__top-img"></div>
+					<div class="channel-info__block-title">
+						<h1 class="channel-info__title">Radio Detroit <span class="channel-info__subtitle">слушать онлайн
+								бесплатро</span></h1>
+					</div>
+				</div>
+				<div class="channel-info">
 					<!--INFOS - Информация о радио -->
 					<!-- <div data-myinfo="logo" style="width:300px; height:80px; background-size:cover;"></div> -->
-					<div data-myinfo="img" class="info__img"></div>
+					<div data-myinfo="img" class="channel-info__img"></div>
 					<br>
 					<b data-myinfo="song"></b><br>
 					Следует: <span data-myinfo="nextsong"></span><br>
