--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@
 				</div>
 				<div class="channel-info">
 					<!--INFOS - Информация о радио -->
-					<!-- <div data-myinfo="logo" style="width:300px; height:80px; background-size:cover;"></div> -->
 					<div data-myinfo="img" class="channel-info__img"></div>
 					<div class="channel-info__content">
 						<div class="channel-info__block">
@@ -68,7 +67,6 @@
 									class="channel-info__text"></span>
 							</div>
 						</div>
-
 						<div id="my_player_custom" class="my_player" data-player="custom" data-autoplay=0 data-volume=30
 							data-streamurl="https://myradio24.org/3311">
 						</div>
@@ -93,39 +91,53 @@
 								<div class="my_loading" style="width:64px; font:16px Arial; color:#ebba16;margin-left: 20px;">
 								</div>
 							</div>
-
-
-
-
-							<p><b>&#127911;</b> <b data-myinfo="listeners"></b> <span data-myinfo="isonline"></span> - <span
-									data-myinfo="kbps"></span> kbps</p>
-							<a href="https://myradio24.org/3311.m3u" target="_blank">
-								<img src="https://myradio24.com/img/wmp.gif" class="info__icon"
-									title="Слушать радио в плеере" />
-							</a>
-							<a href="https://myradio24.com/ru/player/3311"
-								onclick="window.open(this.href,'player','width=300,height=30'); return false;">
-								<img src="https://myradio24.com/img/open.gif" class="info__icon"
-									title="Слушать радио в новом окне" />
-							</a>
-							<p>Вещает: <span data-myinfo="djname"></span></p>
-							<div data-myinfo="htmlavatar"></div>
-							<a href="#" target="_blank" data-myinfo="url"></a><br>
-							<div class="social">
-								<a href="#" class="social__icon"><i class="fab fa-vk"></i></a>
+							<div class="wrap-bottom__block">
+								<div class="wrap-bottom__dj">
+									<span class="channel-info__heading">Вещает:</span><span class="channel-info__text"
+										data-myinfo="djname"></span>
+								</div>
+								<div class="wrap-bottom__social">
+									<a href="https://vk.com/radiodetroit" class="social__icon"><i class="fab fa-vk"></i></a>
+								</div>
 							</div>
+							<!--END INFOS-->
 						</div>
-						<!--END INFOS-->
 					</div>
 				</div>
-		</main>
-		<footer class="footer">
-			<div class="footer__content container">
-				<div class="footer__button">
-					<a href="https://vk.com/radiodetroit" class="btn" target="_blank">Мы ВКонтакте</a>
+				<div class="channel-descr">
+					<h2 class="channel-info__subtitle">Слушать новинки радио <span class="channel-info__title">Radio
+							Detroit</span> бесплатно</h2>
+					<p class="channel-descr__text">Отдохнуть и расслабиться, погрузиться в мир гармонии и наслаждений – все
+						это вам под силу вместе с
+						каналом <strong><i>«Radio Detroit»</i></strong>. Мелодичная, приятная мелодика,
+						завораживающие вокализы и напевы, сочетание
+						этих двух ингредиентов создает идеальную атмосферу для возникновения приятных мыслей. Станьте
+						первооткрывателем, любите необычное, насладитесь прекрасным и удивительным.</p>
+				</div>
+				<div class="history__song">
+					<!--SONGS -->
+					<span class="history__title"><b>История эфира</b></span>
+					<div class="my_lastsongs" data-revert=1">
+						<div class="my_lastsonghtml" style="display:none;">
+							<div class="history__singl">
+								<img src="https://myradio24.com/%songcover%" class="history__singl-img">
+								<span>%songtime%</span>
+								<a href="https://www.youtube.com/results?search_query=%songencode%" class="history__singl-link"
+									target="_blank" title="Найти на YouTube">%song%</a>
+								<span class=vm_likes data-likeid='%songid%'></span>
+							</div>
+						</div>
+					</div>
+					<!--END SONGS-->
+				</div>
+				<div class="footer-player">
+					<!--PLAYER - Блок расположения плеера. Плееры: default, lite, energy или custom (свой плеер) (можно несколько) -->
+					<div id="my_player" class="my_player" data-player="adaptive" data-skin="" data-width=200 data-autoplay=0
+						data-volume=30 data-streamurl="https://myradio24.org/3311"></div>
+					<!--END PLAYER-->
 				</div>
 			</div>
-		</footer>
+		</main>
 	</div>
 	<!--Этот скрипт должен располагаться в самом низу после всех блоков и не должен повторяться на странице. -->
 	<script src="https://myradio24.com/player/player.js?v3.23" data-port="3311" data-interval=15 data-vmid=0></script>
