Замена логотипа, фавикона, правка адаптива

--- a/index.html
+++ b/index.html
@@ -7,16 +7,19 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="author" content="Alexander Dvoryadkin">
 	<meta name="description" content="Отпустите суету и растворитесь в звуках красивой музыки на Radio Detroit">
+
 	<link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="img/favicons/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="img/favicons/favicon-16x16.png">
 	<link rel="manifest" href="img/favicons/site.webmanifest">
-	<link rel="mask-icon" href="img/favicons/safari-pinned-tab.svg" color="#a720c2">
-	<meta name="msapplication-TileColor" content="#a720c2">
-	<meta name="theme-color" content="#a720c2">
+	<link rel="mask-icon" href="img/favicons/safari-pinned-tab.svg" color="#5bbad5">
+	<meta name="msapplication-TileColor" content="#da532c">
+	<meta name="theme-color" content="#ffffff">
+
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@1,500&display=swap" rel="stylesheet">
+	<link rel="stylesheet"
+		href="https://fonts.googleapis.com/css2?family=Montserrat&family=Rubik:ital,wght@0,400;0,500;1,400;1,500&display=swap">
 	<script src="https://use.fontawesome.com/34788adf88.js"></script>
 	<link rel="stylesheet" href="css/style.css">
 	<title>Радио Детроит</title>
@@ -48,7 +51,10 @@
 				</header>
 				<div class="container">
 					<div class="channel-info__top">
-						<div data-myinfo="img" class="channel-info__top-img"></div>
+						<!-- <div data-myinfo="img" class="channel-info__top-img"></div> -->
+						<div class="channel-info__top-img">
+							<img src="img/logo_radio.svg" alt="LOGO RADIO">
+						</div>
 						<div class="channel-info__block-title">
 							<h1 class="channel-info__title">Radio Detroit <span class="channel-info__subtitle">слушать онлайн
 									бесплатно</span></h1>
@@ -112,7 +118,8 @@
 						<p class="channel-descr__text">Отдохнуть и расслабиться, погрузиться в мир гармонии и наслаждений –
 							все
 							это вам под силу вместе с
-							каналом <strong><i>«Radio Detroit»</i></strong>. Мелодичная, приятная мелодика,
+							каналом <strong class="channel-descr__bold">«<i>Radio Detroit</i>»</strong>. Мелодичная, приятная
+							мелодика,
 							завораживающие вокализы и напевы, сочетание
 							этих двух ингредиентов создает идеальную атмосферу для возникновения приятных мыслей. Станьте
 							первооткрывателем, любите необычное, насладитесь прекрасным и удивительным.</p>
