--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 										<a href="https://vk.com/radiodetroit" class="social__icon"><i class="fab fa-vk"></i></a>
 									</div>
 								</div>
-								<!--END INFOS-->
+								<!--END INFOS!-->
 							</div>
 						</div>
 					</div>
