--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@
 							<img src="img/logo_radio.svg" alt="LOGO RADIO">
 						</div>
 						<div class="channel-info__block-title">
-							<h1 class="channel-info__title">Radio Detroit <span class="channel-info__subtitle">слушать онлайн
-									бесплатно</span></h1>
+							<h1 class="channel-info__title">Radio Detroit <span class="channel-info__subtitle"><i
+										style="color:#ebba16;">music</i>
+									слушать онлайн бесплатно</span></h1>
 						</div>
 					</div>
 					<div class="channel-info">
