Добавлены и стилизованы кропки переключения радио

--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
 										style="color:#ebba16;">music</i>
 									слушать онлайн бесплатно</span></h1>
 						</div>
+						<div class="channel-info__block-radio">
+							<a href="#" class="btn">Radio</a>
+							<a href="#" class="btn">Music</a>
+						</div>
 					</div>
 					<div class="channel-info">
 						<!--INFOS - Информация о радио -->
