Написан HTML выподающего меню

--- a/index.html
+++ b/index.html
@@ -61,8 +61,19 @@
 									слушать онлайн бесплатно</span></h1>
 						</div>
 						<div class="channel-info__block-radio">
-							<a href="#" class="btn">Radio</a>
-							<a href="#" class="btn">Music</a>
+							<ul class="nav__radio">
+								<li>
+									<span class="nav__radio--title">Канал</span>
+									<ul class="sub-nav__radio">
+										<li>
+											<a href="#" class="sub-nav__radio--link">Detroit</a>
+										</li>
+										<li>
+											<a href="#" class="sub-nav__radio--link">Detroit Special #1</a>
+										</li>
+									</ul>
+								</li>
+							</ul>
 						</div>
 					</div>
 					<div class="channel-info">
