Сверстано и стилизовано выподающее меню, написан скрипт

--- a/index.html
+++ b/index.html
@@ -64,12 +64,14 @@
 							<ul class="nav__radio">
 								<li>
 									<span class="nav__radio--title">Канал</span>
+									<span class="nav__arrow arrow"></span>
 									<ul class="sub-nav__radio">
 										<li>
-											<a href="#" class="sub-nav__radio--link">Detroit</a>
+											<a href="http://radiodetroit.ru/" class="sub-nav__radio--link">Detroit</a>
 										</li>
 										<li>
-											<a href="#" class="sub-nav__radio--link">Detroit Special #1</a>
+											<a href="http://music.radiodetroit.ru/" class="sub-nav__radio--link">Detroit Special
+												#1</a>
 										</li>
 									</ul>
 								</li>
